# Otus2

./: .travis.yml  CMakeLists.txt  buildProject  test1.txt  test2.txt
Otus2/: BoostTest.cpp  CMakeLists.txt  Config.h.in  GoogleTest.cpp  Main.cpp  QuaterByteAdress.cpp  QuaterByteAdress.hpp
lib/: CMakeLists.txt  QuaterByteAddress.cpp  QuaterByteAddress.h  ipOket.cpp  ipOket.h
src/: .main.cpp.swp  CMakeLists.txt  CMakeLists2.txt  main.cpp
test/bTest/: BoostTest.cpp  btestIp4Oket.cpp
test/gTest/: GoogleTest.cpp  gtestIp4Oket.cpp
